--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,10 +37,11 @@ p {
   font-size: 16px;
 }
 
-.video {
-  text-align: center;
+video {
+  display: block;
   margin: 0 auto;
-  width: 400px
+  text-align: center;
+  object-fit: contain;
 }
 
 .image {
